# kinguard-notify

./: .gitignore  CMakeLists.txt  Config.h.in  libkgpNotify.pc.in  libkgpnotify.pc.in
debian/: README  changelog  control  copyright  libkgpnotify1.install  libkgpnotify1.postinst  rules
dispatcher/: kgpNotify.cpp  kgpNotify.h
notifiers/LOG_CRIT/: syslog_notify.py
notifiers/LOG_DEBUG/: led_notify.py
notifiers/LOG_EMERG/: email_notify.py
notifiers/notifiers/: email_notify.py  led_notify.py  syslog_notify.py
test/: CMakeLists.txt  TestNotify.cpp  TestNotify.h
test-notifiers/LOG_ALERT/: notifier2.sh
test-notifiers/LOG_INFO/: notifier_fail.sh
test-notifiers/LOG_NOTICE/: not_1
test-notifiers/notifiers/: notifier1.sh  notifier2.sh  notifier_fail.sh
